force-app/main/default/objects/Account/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>The other Addresses of the client.</description>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>